--- a/extension/chromeium/popup.html
+++ b/extension/chromeium/popup.html
@@ -5,11 +5,11 @@
   </head>
   <body>
     <div id="bm">
-      <!-- <h1>Save to bookmarks.db</h1>
+      <h1>Save to bookmarks.db</h1>
       <p id="status">OFFLINE</p>
-      <h2>Save bm</h2>
-      <button id = "sendButtonbm">Send current link</button><br>
-      <span id="bmSpan"></span> -->
+      <input type="text" id="inputName">
+      <button id = "send">Save current link</button><br>
+      <span id="bmSpan"></span>
     </div>
 
     </div>
