added delete; fixed double json extracion at /add; updated to use async and await everywhere

--- a/extension/chromeium/popup.html
+++ b/extension/chromeium/popup.html
@@ -8,7 +8,7 @@
       <h1>Save to bookmarks.db</h1>
       <p id="status">OFFLINE</p>
       <input type="text" id="inputName">
-      <button id = "send">Save current link</button><br>
+      <button id = "send">Save current link</button><button id = "delete" disabled>Delete</button><br>
       <span id="bmSpan"></span>
     </div>
 
